speedtest/speedtest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: ht
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: speedtest
  template:
    metadata:
      labels:
        k8s-app: speedtest
    spec:
      containers:
        - env:
            - name: OOKLA_EULA_GDPR
              value: "true"
          image: henrywhitaker3/speedtest-tracker
          name: speedtest
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: speedtest-claim0
      restartPolicy: Always
      volumes:
        - name: speedtest-claim0
          persistentVolumeClaim:
            claimName: speedtest-claim0
