speedtest/speedtest-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: speedtest
  namespace: ht
  labels:
    app: speedtest
    version: v1
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: speedtest
