speedtest/speedtest-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: speedtest
  namespace: ht
  labels:
    app: speedtest
    version: v1
spec:
  hosts:
    - speedtest.the.frost.haus
  gateways:
    - default/service-gw
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: speedtest
